# ms-diploma

./: .dockerignore  .env.example  .gitignore  Dockerfile  alembic.ini  docker-compose.yaml  index.html  package-lock.json  package.json  pyproject.toml  uav.sqlite
alembic/: env.py
alembic/versions/: 51cbcbf95cb3_initial_schema.py  dc41f2e1807a_init_tables.py
docker/: start.sh
front/: index.html  login.html
frontend/src/: App.jsx  index.css
frontend/src/components/: CanvasView.jsx  InfoPanel.jsx  LoginPage.jsx  MiniMap.jsx  RegisterPage.jsx  Sidebar.jsx  StatusBar.jsx  TopBar.jsx
src/uav_service/: __main__.py  application.py  asgi.py  settings.py
src/uav_service/auth/: constants.py  dependencies.py  jwt.py  security.py
src/uav_service/db/: __init__.py  dependencies.py  engine.py  logic.py  session.py  sqlite.py  tables.py
src/uav_service/logic/: compute.py
src/uav_service/views/: auth.py  models.py  routers.py
